se agregaron los metodos de simpson 13 y 38, se modificaron y estan bien, ahora dañenlos malparidos

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <h1>Calculadora de Métodos Numéricos</h1>
   </header>
   <nav class="nav-methods">
-    <a href="trapezoidal.html">Trapezoidal</a>
+    <a href="index.html">Trapezoidal</a>
     <a href="boole.html">Boole</a>
     <a href="simpson13.html">Simpson 1/3</a>
     <a href="simpson38.html">Simpson 3/8</a>
