--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <a href="boole.html">Boole</a>
     <a href="simpson13.html">Simpson 1/3</a>
     <a href="simpson38.html">Simpson 3/8</a>
-    <a href="#">+ Agregar otro método</a>
+    <a href="simpsonabierto.html">Simpson Abierto</a>
   </nav>
   <div class="container">
     <div class="main-content">
