--- a/simpson38.html
+++ b/simpson38.html
@@ -213,7 +213,7 @@
         <a href="boole.html">Boole</a>
         <a href="simpson13.html">Simpson 1/3</a>
         <a href="simpson38.html">Simpson 3/8</a>
-        <a href="#">+ Agregar otro método</a>
+        <a href="simpsonabierto.html">Simpson Abierto</a>
     </nav>
     <div class="container">
         <div class="main-content">
@@ -240,9 +240,7 @@
                 
                 <div class="formula-info">
                     <div class="formula-title">Fórmula de Simpson 3/8</div>
-                    <p>El método de Simpson 3/8 utiliza polinomios de tercer grado para aproximar la integral. Es especialmente útil cuando se requiere mayor precisión que Simpson 1/3.</p>
-                    <p>∫<sub>a</sub><sup>b</sup> f(x) dx ≈ (b-a)/8 · [f(a) + 3·f(a + h) + 3·f(a + 2h) + f(b)]</p>
-                    <p>donde h = (b-a)/3</p>
+                    <p>El método Simpson 3/8 utiliza polinomios de tercer grado. Es más preciso que el método 1/3 para ciertas funciones.</p>
                 </div>
             </div>
             <div class="card result-section">
